--- a/src/template.html
+++ b/src/template.html
@@ -43,7 +43,7 @@
                 </section>
 
                 <section class="col-md-8">
-                    <div class="row" id="employeesSection">
+                    <div class="row" id="teamSection">
 
                         <article class="col-12 col-sm-6">
                             <div class="card mb-3">
@@ -55,7 +55,7 @@
                                   <p class="card-text">
                                     <strong>ID: </strong>Insert ID #
                                     <br>
-                                    <strong>GitHub: </strong>Username
+                                    <strong>GitHub: </strong> <a href="https://github.com/" target="_blank">Username</a>
                                   </p>
                                 </section>
                                 <section class="card-footer bg-transparent">
